--- a/transition/netease-music-summary/index.html
+++ b/transition/netease-music-summary/index.html
@@ -31,6 +31,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- 特殊内容 -->
+                    <div class="paras">
+                        <p class="para f-aniLineUp" style="transition-delay: .2s">11月1日</p>
+                        <p class="para f-aniLineUp" style="transition-delay: .4s">大概是特别的一天</p>
+                        <p class="para f-aniLineUp" style="transition-delay: .6s">这一天里</p>
+                        <p class="para f-aniLineUp" style="transition-delay: .8s">TA把つじあやの的《風になる》</p>
+                        <p class="para f-aniLineUp" style="transition-delay: 1s">反复听了59次</p>
+                    </div>
                 </div>
             </div>
             <div class="swiper-slide">
