--- a/game/fly_brids/index.html
+++ b/game/fly_brids/index.html
@@ -20,6 +20,8 @@
         <div id="grassLand1"></div>
         <div id="grassLand2"></div>
     </div>
+    <script src="./js/baseObj.js"></script>
+    <script src="./js/block.js"></script>
     <script src="./js/bird.js"></script>
     <script src="./js/index.js"></script>
 </body>
