--- a/svg/nhd/index.html
+++ b/svg/nhd/index.html
@@ -1,72 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        .text{
+
+        .text {
 
             font-size: 64px;
             font-weight: bold;
             text-transform: uppercase;
             filter: none;
             fill: none;
-            stroke:#3498bd;
+            stroke: #3498bd;
             stroke-width: 2px;
             stroke-dasharray: 90, 310;
-            animation: anm 6s linear infinite;
-        }
-        .text-1{
-            animation-delay: -1.5s;
-            stroke: #3498bd;
-            text-shadow: 0 0 5px #3498bd;
-        }
-        .text-2{
-            animation-delay: -3s;
-            stroke: #f39c12;
-            text-shadow: 0 0 5px #f39c13;
-        }
-        .text-3{
-            animation-delay: -4.5s;
-            stroke: #e74c3c;
-            text-shadow: 0 0 5px #e74c3c;
-        }
-        .text-4{
-            animation-delay: -6s;
-            stroke: #9b59b6;
-            text-shadow: 0 0 5px #9b59b6;
+            animation: anm 16s linear infinite;
         }
 
-        @keyframes anm{
-            0%{
+        .text-1 {
+            animation-delay: -1.5s;
+            stroke: #3498bd;
+            text-shadow: 0 0 18px #3498bd;
+        }
+
+        .text-2 {
+            animation-delay: -3s;
+            stroke: #f39c12;
+            text-shadow: 0 0 18px #f39c13;
+        }
+
+        .text-3 {
+            animation-delay: -4.5s;
+            stroke: #e74c3c;
+            text-shadow: 0 0 18px #e74c3c;
+        }
+
+        .text-4 {
+            animation-delay: -6s;
+            stroke: #9b59b6;
+            text-shadow: 0 0 18px #9b59b6;
+        }
+
+        @keyframes anm {
+            0% {
                 stroke-dashoffset: 0;
             }
-            100%{
+
+            100% {
                 stroke-dashoffset: 100%;
             }
         }
     </style>
 </head>
+
 <body>
-    <svg class="a"
-        width="100%"
-        height="100"
-        xmlns="http://www.w3.org/2000/svg"
-    >
-    <text text-anchor="middle" x="50%" y="50%" class="text text-1">segmentfault.com</text>
-    <text text-anchor="middle" x="50%" y="50%" class="text text-2">segmentfault.com</text>
-    <text text-anchor="middle" x="50%" y="50%" class="text text-3">segmentfault.com</text>
-    <text text-anchor="middle" x="50%" y="50%" class="text text-4">segmentfault.com</text>
+    <svg class="a" width="100%" height="1000" xmlns="http://www.w3.org/2000/svg">
+        <path class="paths" stroke="red" fill="none" d="M150 0 L75 200 L225 200 Z"></path>
+        <path id="lineAB" d="M 100 350 l 150 -300" stroke="red" stroke-width="3" fill="none" />
+        <path id="lineBC" d="M 250 50 l 150 300" stroke="red" stroke-width="3" fill="none" />
+        <path d="M 175 200 l 150 0" stroke="green" stroke-width="3" fill="none" />
+        <path d="M 100 350 t 150 -100 300 0" stroke="blue" stroke-width="5" fill="none" />
+        <!-- Mark relevant points -->
+        <g stroke="black" stroke-width="3" fill="black">
+            <circle id="pointA" cx="100" cy="350" r="3" />
+            <circle id="pointB" cx="250" cy="50" r="3" />
+            <circle id="pointC" cx="400" cy="350" r="3" />
+        </g>
+        <!-- Label the points -->
+        <g font-size="30" font="sans-serif" fill="white" stroke="red" text-anchor="middle">
+            <text x="100" y="350" dx="-30">A</text>
+            <text x="250" y="50" dy="-10">B</text>
+            <text x="400" y="350" dx="30">C</text>
+        </g>
+        <defs>
+            <path id="path1" d="M75,20 a1,1 0 0,0 100,0" />
+        </defs>
+        <text x="10" y="100" style="fill:red;">132
+            <textPath xlink:href="#path1">I love SVG I love SVG</textPath>
+        </text>
+        <text text-anchor="middle" x="50%" y="50%" class="text text-1">SegmentFault.com</text>
+        <text text-anchor="middle" x="50%" y="50%" class="text text-2">SegmentFault.com</text>
+    <text text-anchor="middle" x="50%" y="50%" class="text text-3">SegmentFault.com</text>
+    <text text-anchor="middle" x="50%" y="50%" class="text text-4">SegmentFault.com</text>
 
     </svg>
     <script>
-        
+
     </script>
 </body>
+
 </html>
