--- a/js/jsonp/index.html
+++ b/js/jsonp/index.html
@@ -7,16 +7,52 @@
   <title>Document</title>
 </head>
 <body>
-  <!-- script -->
+  协议: //域名.com:port
+  https 443
+  3部分 只要有一个不同 就会产生跨域
+  baidu.com -> api.baiud.com
+  http 80
   <script>
   </script>
   <script>
-  function getBook(data) {
-    console.log('data', data);
-  }
+  // function getBook(data) {
+  //   console.log('data', data);
+  // }
   </script>
   <!-- getBook([{}, {}]) -->
   <!-- getBook([{"book":"book2"}]) -->
-  <script src="http://localhost:3002/api/books"></script>
+  <!-- <script src="http://localhost:3002/api/books?callback=getBook"></script> -->
+  <!-- 
+    封装一个 JSONP
+    jsonP({
+      url: 'http:',
+      callback: 'callback'
+    }).then(res => {})
+   -->
+  <script>
+    function jsonP (option) {
+      let {url, callback} = option
+      return new Promise((resolve, reject) => {
+        let methodName = 'afcsf'
+        window[methodName] = function (data) {
+          resolve(data)
+          delete window[methodName];
+          document.body.removeChild(scriptNode)
+        }
+        var scriptNode = document.createElement('script')
+        scriptNode.src = `${url}?${callback}=${methodName}`
+        document.body.appendChild(scriptNode)
+        scriptNode.onerror = function () {
+          reject('error')
+        }
+      })
+    }
+    jsonP({
+      url: 'http://localhost:3002/api/books',
+      callback: 'getBook'
+    }).then(res => {
+      console.log('----', res)
+    })
+  </script>
 </body>
 </html>
